--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: lightgrey;
+  background-color: #f9fafb;
   font-family: 'Open Sans', sans-serif;
   display: flex;
   align-items: center;
@@ -15,7 +20,7 @@ body {
 }
 
 .container {
-  background-color: white;
+  background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
@@ -37,13 +42,13 @@ h2 {
 }
 
 .form-control label {
-  color: grey;
+  color: #777;
   display: block;
   margin-bottom: 5px;
 }
 
 .form-control input {
-  border: 2px solid darkgrey;
+  border: 2px solid #f0f0f0;
   border-radius: 4px;
   display: block;
   width: 100%;
@@ -53,5 +58,38 @@ h2 {
 
 .form-control input:focus {
   outline: 0;
-  border-color: blue;
+  border-color: #777;
+}
+
+.form-control.success input {
+  border-color: var(--success-color);
+}
+
+.form-control.error input {
+  border-color: var(--error-color);
+}
+
+.form-control small {
+  color: var(--error-color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.form-control.error small {
+  visibility: visible;
+}
+
+.form button {
+  cursor: pointer;
+  background-color: #3498db;
+  border: 2px solid #3498db;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
